src/test/ui/type/type-check/unknown_type_for_closure.stderr
error[E0282]: type annotations needed for the closure `fn(Vec<_>)`
  --> $DIR/unknown_type_for_closure.rs:2:9
   |
LL |     let x = |b: Vec<_>| {};
   |         ^
   |
help: consider giving `x` an explicit type, where the type for struct `Vec<_>` is specified
   |
LL |     let x: [closure@$DIR/unknown_type_for_closure.rs:2:13: 2:27] = |b: Vec<_>| {};
   |          +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0282]: type annotations needed
  --> $DIR/unknown_type_for_closure.rs:6:14
   |
LL |     let x = |_| {};
   |              ^
   |
help: consider giving this closure parameter an explicit type
   |
LL |     let x = |_: _| {};
   |               +++

error[E0282]: type annotations needed for the closure `fn(_)`
  --> $DIR/unknown_type_for_closure.rs:10:9
   |
LL |     let x = |k: _| {};
   |         ^
   |
help: consider giving `x` an explicit type, where the placeholders `_` are specified
   |
LL |     let x: [closure@$DIR/unknown_type_for_closure.rs:10:13: 10:22] = |k: _| {};
   |          +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error[E0282]: type annotations needed
  --> $DIR/unknown_type_for_closure.rs:14:28
   |
LL |     let x = || -> Vec<_> { Vec::new() };
   |                            ^^^^^^^^ cannot infer type of the type parameter `T` declared on the struct `Vec`
   |
help: consider specifying the generic argument
   |
LL |     let x = || -> Vec<_> { Vec::<T>::new() };
   |                               +++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0282`.
